--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^5.2.0",
     "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
+    "ngx-router-animations": "^13.0.0",
     "nodecloud-particleground": "^0.1.0",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.4.24",
